Fixed bug in text cnn where it wasn't using the super predict method

--- a/train_config.yaml
+++ b/train_config.yaml
@@ -6,7 +6,7 @@ data_config:
 model_config:
  holdout_split: 0.2
  val_split: 0.2
- model_type: TextCNN
+ model_type: TextCNNWideAndDeep
  ngram_filters:
   - 2
   - 3
