--- a/train_config.yaml
+++ b/train_config.yaml
@@ -6,7 +6,7 @@ data_config:
 model_config:
  holdout_split: 0.2
  val_split: 0.2
- model_type: TextCNNWideAndDeep
+ model_type: TextLSTM
  ngram_filters:
   - 2
   - 3
